test/sema/typeck/return/return-unit-from-fn.dora
fn f() { }
fn g(): Int32 { return f(); }
